Airflow/logs/dag_id=postgres_operator_dag_v1/run_id=manual__2022-12-11T15:08:30.300826+00:00/task_id=create_postgres_table/attempt=1.log
[2022-12-11T15:08:33.066+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag_v1.create_postgres_table manual__2022-12-11T15:08:30.300826+00:00 [queued]>
[2022-12-11T15:08:33.078+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: postgres_operator_dag_v1.create_postgres_table manual__2022-12-11T15:08:30.300826+00:00 [queued]>
[2022-12-11T15:08:33.078+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2022-12-11T15:08:33.078+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 1
[2022-12-11T15:08:33.078+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2022-12-11T15:08:33.252+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2022-12-11 15:08:30.300826+00:00
[2022-12-11T15:08:33.257+0000] {standard_task_runner.py:55} INFO - Started process 2903 to run task
[2022-12-11T15:08:33.260+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'postgres_operator_dag_v1', 'create_postgres_table', 'manual__2022-12-11T15:08:30.300826+00:00', '--job-id', '47', '--raw', '--subdir', 'DAGS_FOLDER/postgres_operator_dag.py', '--cfg-path', '/tmp/tmpwxwbksrz']
[2022-12-11T15:08:33.260+0000] {standard_task_runner.py:83} INFO - Job 47: Subtask create_postgres_table
[2022-12-11T15:08:33.553+0000] {task_command.py:389} INFO - Running <TaskInstance: postgres_operator_dag_v1.create_postgres_table manual__2022-12-11T15:08:30.300826+00:00 [running]> on host 4f590d7fc3b1
[2022-12-11T15:08:34.210+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=postgres_operator_dag_v1
AIRFLOW_CTX_TASK_ID=create_postgres_table
AIRFLOW_CTX_EXECUTION_DATE=2022-12-11T15:08:30.300826+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-12-11T15:08:30.300826+00:00
[2022-12-11T15:08:34.210+0000] {sql.py:253} INFO - Executing: 
            create table if not exists dag_demo_table (
                dt date,
                dag_id character varying,
                primary (dt, dag_id)
            )
        
[2022-12-11T15:08:34.218+0000] {base.py:73} INFO - Using connection ID 'financial_database' for task execution.
[2022-12-11T15:08:34.430+0000] {base.py:73} INFO - Using connection ID 'financial_database' for task execution.
[2022-12-11T15:08:34.439+0000] {sql.py:364} INFO - Running statement: 
            create table if not exists dag_demo_table (
                dt date,
                dag_id character varying,
                primary (dt, dag_id)
            )
        , parameters: None
[2022-12-11T15:08:34.442+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 5:                 primary (dt, dag_id)
                                ^

[2022-12-11T15:08:34.449+0000] {taskinstance.py:1327} INFO - Marking task as FAILED. dag_id=postgres_operator_dag_v1, task_id=create_postgres_table, execution_date=20221211T150830, start_date=20221211T150833, end_date=20221211T150834
[2022-12-11T15:08:34.909+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 47 for task create_postgres_table (syntax error at or near "("
LINE 5:                 primary (dt, dag_id)
                                ^
; 2903)
[2022-12-11T15:08:34.954+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2022-12-11T15:08:34.975+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
